# AlgorithmVision

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  compilar.sh  run-integrado.bat  run-integrado.sh
docs/: motor-grafico.md
docs/uml/: diagrama-classes.puml  diagrama-sequencia.puml
glad/include/glad/: glad.h
glad/src/: glad.c
headers/: main_MotorGrafico.h
include/: AlgorithmRegistry.h  BogoSorter.h  BubbleSorter.h  DataGenerator.h  GLLoader.h  GraphSimulator.h  HeapSorter.h  ISortingStrategy.h  InsertionSorter.h  KWayMergeSorter.h  MergeSorter.h  MiracleSorter.h  QuickSorter.h  SelectionSorter.h  Shader.h  ShellSorter.h  SleepSorter.h  SortEngine.h  SortRenderer.h  SortSimulator.h  SortTypes.h  StalinSorter.h  ThanosSorter.h  UIComponents.h
java/main/: ControlUI.java  Main.java  MotorGrafico.java  TesteIntegracao.java
java/main/controle/: ControladorSimulacao.java
java/main/ui/: JanelaPrincipal.java  PainelControles.java
native/: motor.cpp
shaders/: bar.fs  circle.fs  circle.vs  line.fs  line.vs
src/: main.cpp
src/algorithms/: BogoSorter.cpp  BubbleSorter.cpp  DataGenerator.cpp  GraphSimulator.cpp  HeapSorter.cpp  InsertionSorter.cpp  KWayMergeSorter.cpp  MergeSorter.cpp  MiracleSorter.cpp  QuickSorter.cpp  SelectionSorter.cpp  ShellSorter.cpp  SleepSorter.cpp  SortEngine.cpp  SortSimulator.cpp  StalinSorter.cpp  ThanosSorter.cpp
src/jni/: motor.cpp
src/main/: Main.java
src/main/controle/: ControladorMotorNativo.java
src/main/ui/: PainelRenderizacao.java
src/renderer/: Shader.cpp  SortRenderer.cpp
src/ui/: UIComponents.cpp
tests/: EngineTests.cpp  SortSimulatorTests.cpp
